samples/_failures_safe/1761424778_3d627c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_590b345c.c: In function ‘main’:
./samples/SAFE/__tmp_590b345c.c:198:5: error: expected expression at end of input
  198 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_590b345c.c:198:5: error: expected declaration or statement at end of input
